--- a/app/src/main/res/xml/taobao_service_config.xml
+++ b/app/src/main/res/xml/taobao_service_config.xml
@@ -3,8 +3,9 @@
     android:accessibilityEventTypes="typeAllMask"
     android:accessibilityFeedbackType="feedbackGeneric"
     android:accessibilityFlags="flagDefault"
+    android:canRequestEnhancedWebAccessibility="true"
     android:canRetrieveWindowContent="true"
     android:description="@string/accessibility_service_description"
-    android:notificationTimeout="300"
+    android:notificationTimeout="100"
     android:packageNames="com.taobao.taobao"
-    android:settingsActivity="calvin.order.taobao.TaobaoService" />
+    android:settingsActivity="calvin.order.taobao.TaobaoService"/>
